--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,11 @@
 <body>
 
   <div id="wrapper">
+    <div class="snake-status-container">
+      <div class="status-div"><span>Fails: </span><span id="fails-counter">0</span></div>
+      <div class="status-div"><span>Points: </span><span id="points-counter">0</span></div>
+      <div class="status-div"><span>Best: </span><span id="best-counter">0</span></div>
+    </div>
     <canvas id="canvas" width="450" height="450"></canvas>
   </div>
 
