removed browser.js

--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,6 @@
   </div>
 
   <script type="application/dart" src="main.dart"></script>
-  <script data-pub-inline src="packages/browser/dart.js"></script>
+  <!--<script data-pub-inline src="packages/browser/dart.js"></script>-->
 </body>
 </html>
